--- a/changelog
+++ b/changelog
@@ -1,7 +1,9 @@
 {
-  "version": "Alpha V1.66",
-  "summary": "Small Hotfix for Talkbacks",
+  "version": "Alpha V1.67",
+  "summary": "ACTUAL Small Hotfix for Talkbacks",
   "changes": {
-    "Bugfixes":"Fixed a bug with talkbacks not correctly grouping phrases that used quotes"
+    "Bugfixes":"
+    -THIS TIME I ACTUALLY fixed a bug with talkbacks not correctly grouping phrases that used quotes.\n
+    -Minor code cleanup"
   }
 }
