--- a/changelog
+++ b/changelog
@@ -1,8 +1,9 @@
 {
-  "version": "Alpha V1.5",
-  "summary": "Adds /quote and /changelog to Roti!",
+  "version": "Alpha V1.75",
+  "summary": "Update catch-up & AI upgrades",
   "changes": {
-    "NEW /quote": "The /quote command has been added to Roti so you can now blackmail your friends with all of the suspicious things they've said! Check out the new commands and how to use them in /help or through the slash command list!",
-    "NEW /changelog": "The /changelog command has been also added to Roti! You can check out the recent updates to Roti in an easy-to-access way!"
+    "Internal Updates": "-Updated Lavalink jar to 4.0.\n-Updated to the official Wavelink 3.0 release.\n-The music commands are currently disabled pending a rewrite of the whole music system with wavelink 3.0.",
+    "Features": "-Roti has better AI capabilities with /generate now! Can generate images from any prompt and pull from a database for images as well.\n-Optimizations",
+    "Bugfixes": "-Fixed Roti hanging on /generate commands.\n-Fixed bugs related to the navigation panels with the latest discord.py release."
   }
 }
